<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background = "@drawable/aboutwallpaper">>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="263dp"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        app:srcCompat="@drawable/zakat"
        tools:srcCompat="@drawable/zakat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/app_name"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="32dip"
        android:layout_marginRight="16dip"
        android:text="@string/about_text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="32dip"
        android:layout_marginRight="16dip"
        android:textAlignment="center"
        android:text="@string/developer" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="16dip"
        android:layout_marginRight="16dip"
        android:text="@string/code"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="16dip"
        android:layout_marginRight="16dip"
        android:text="@string/link"
        android:textAlignment="viewStart"
        android:textColorLink="#0053FF"
        />


</RelativeLayout>